ubuntu-release-upgrader (1:21.10.3) UNRELEASED; urgency=medium

  * DistUpgradeQuirks.py: add in a method for reading the system vendor out of
    DMI information which then can be used to block upgrades. (LP: #1929449)

 -- Brian Murray <brian@ubuntu.com>  Mon, 24 May 2021 10:36:19 -0700

ubuntu-release-upgrader (1:21.10.2) impish; urgency=medium

  * DistUpgradeFetcherCore.py: when upgrading with the text view display the
    release announcement in the terminal. (LP: #1925529)
  * tests/test_dist_upgrade_fetcher_core.py: do not display the release
    announcement during the test.
  * Run pre-build.sh: updating mirrors, demotions, and translations.

 -- Brian Murray <brian@ubuntu.com>  Fri, 21 May 2021 15:43:16 -0700

ubuntu-release-upgrader (1:21.10.1) impish; urgency=medium

  * Update for 21.04 -> 21.10.

 -- Brian Murray <brian@ubuntu.com>  Wed, 28 Apr 2021 11:01:58 -0700

ubuntu-release-upgrader (1:21.04.11) hirsute; urgency=medium

  * DistUpgrade/DevelReleaseAnnouncement: Add a statement recommending that
    people do not upgrade to hirsute at this point in time.
  * Run pre-build.sh: updating mirrors, demotions, and translations.

 -- Brian Murray <brian@ubuntu.com>  Wed, 21 Apr 2021 16:00:16 -0700

ubuntu-release-upgrader (1:21.04.10) hirsute; urgency=medium

  * DistUpgrade/DistUpgradeQuirks.py: look for the proper package name in the
    cache. (LP: #1924793)
  * Run pre-build.sh: updating mirrors, demotions, and translations.

 -- Brian Murray <brian@ubuntu.com>  Fri, 16 Apr 2021 11:55:36 -0700

ubuntu-release-upgrader (1:21.04.9) hirsute; urgency=medium

  [ Dave Jones ]
  * DistUpgrade/DistUpgradeQuirks.py: Add quirk to rewrite references to fkms
    overlay in Raspberry Pi boot configuration to kms overlay (and disable the
    related camera firmware lines). (LP: #1923673)

  [ Brian Murray ]
  * Run pre-build.sh: updating mirrors, demotions, and translations.

 -- Brian Murray <brian@ubuntu.com>  Thu, 15 Apr 2021 09:29:00 -0700
