@@ -1,6 +1,6 @@
 
 # main repo
-deb http://old-releases.ubuntu.com/ubuntu oneiric main restricted multiverse universe
-deb-src http://old-releases.ubuntu.com/ubuntu oneiric main restricted multiverse
+deb http://old-releases.ubuntu.com/ubuntu eoan main restricted multiverse universe
+deb-src http://old-releases.ubuntu.com/ubuntu eoan main restricted multiverse
 
-deb http://old-releases.ubuntu.com/ubuntu oneiric-security main restricted
+deb http://old-releases.ubuntu.com/ubuntu eoan-security main restricted
