@@ -2,6 +2,8 @@ ubuntu-release-upgrader (1:21.10.3) UNRELEASED; urgency=medium
 
   * DistUpgradeQuirks.py: add in a method for reading the system vendor out of
     DMI information which then can be used to block upgrades. (LP: #1929449)
+  * tests/test_sources_list.py: switch from precise to focal as precise was
+    removed from the archive.
 
  -- Brian Murray <brian@ubuntu.com>  Mon, 24 May 2021 10:36:19 -0700
 
